// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input field component should have a default value for the autoCapitalize property. 1`] = `"none"`;

exports[`input field component should have a default value for the style property. 1`] = `
Object {
  "fontSize": 18,
  "paddingBottom": 24,
  "width": "100%",
}
`;

exports[`input field component should render correctly. 1`] = `
<TextInput
  allowFontScaling={true}
  autoCapitalize="none"
  autoCorrect={false}
  placeholder="put somrthing here..."
  style={
    Object {
      "fontSize": 18,
      "paddingBottom": 24,
      "width": "100%",
    }
  }
/>
`;
